fix for footer not showing up

--- a/app/assets/stylesheets/home/index.css.scss
+++ b/app/assets/stylesheets/home/index.css.scss
@@ -1,5 +1,5 @@
 #home_index {
-  height:130em;
+  min-height:120em;
   width:auto;
   position:relative;
   overflow:hidden;
